--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "version": "1.0.0",
   "main": "app.js",
   "author": "Ishika&Angelo",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "apollo-server": "^2.19.2",
+    "graphql-tag": "^2.11.0"
+  }
 }
